Changes in identityEndpoints and Identity Extensions - 1

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: my-web-api
+    name: timesnap-web-api
     runtime: docker
     repo: https://github.com/KSaiVishnu/TimeSnapBackend
     region: oregon
